# merobox

./: .gitignore  .pre-commit-config.yaml  BOOTSTRAP_README.md  BOUNTY_ANALYSIS_ETHEREUM_SECRET_KEY.md  BUILD.md  CHANGELOG.md  DYNAMIC_VARIABLES.md  Dockerfile.merod  LLM.md  Makefile  NODE_MANAGEMENT_FLAGS.md  PUBLISHING.md  README.md  RELEASE_ANALYSIS.md  REPEAT_STEP_README.md  bounties.json  build.py  build_binary.py  build_executable.py  gpg.key  kv_store.wasm  merobox.spec  merobox_cli.py  pyproject.toml  requirements.txt  setup.py  workflow-bootstrap.yml  workflow-debug.yml  workflow-example-curb.yml  workflow-example.yml  workflow-repeat-example.yml  workflow-restart-example.yml
.github/: RELEASE_SETUP.md
architecture/: cli-reference.html  error-handling.html  glossary.html  index.html  nav.js  near-integration.html  node-management.html  remote-nodes.html  styles.css  system-overview.html  testing.html  troubleshooting.html  workflow-engine.html  workflow-yaml.html
commands/: bootstrap.py  context.py  execute.py  identity.py  install.py  join.py  manager.py
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
docs/: CURSOR_CONTRIBUTING.md  README.md  astro.config.mjs  package.json
example-project/: INTEGRATION_GUIDE.md  README.md  conftest.py  demo.py  pyproject.toml  requirements.txt  test-workflow.yml
example-project/res/: kv_store.wasm
example-project/src/hello_world/: __init__.py  client.py
example-project/tests/: test_basic_integration.py  test_clean_syntax.py  test_merobox_integration.py  test_workflow_integration.py
example-project/workflows/: workflow-example.yml
merobox/: __init__.py  cli.py  testing.py
scripts/: publish.py
workflow-examples/: kv-store-benchmark.yml  open-invitation-log-analysis.md  tee-g1-restricted-auto-admit.yml  tee-g2-open-inheritance-replication.yml  tee-g3-disable-cascade-purge.yml  tee-g4-inherited-role.yml  tee-matrix-open-join-with-created.yml  tee-matrix-open-late-join.yml  tee-matrix-restricted-join-with-created.yml  tee-r1-offline-backfill.yml  (+51 more)
(+218 files in other folders)
