[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merobox"
version = "0.1.8"
description = "A Python CLI tool for managing Calimero nodes in Docker containers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Merobox Team", email = "team@merobox.com"}
]
keywords = ["calimero", "blockchain", "docker", "cli", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "docker>=6.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
    "calimero-client-py>=0.1.4",
]

[project.scripts]
merobox = "merobox.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["merobox*"]
